--- a/mekato/pubspec.yaml
+++ b/mekato/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^6.0.0
+  image_picker: ^0.8.7+4
 
 dev_dependencies:
   flutter_test:
