--- a/mekato/pubspec.yaml
+++ b/mekato/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   provider: ^6.0.0
   image_picker: ^0.8.7+4
+  http: ^1.5.0
 
 dev_dependencies:
   flutter_test:
